--- a/MOVGone.Bot/MOVGone.Bot.csproj
+++ b/MOVGone.Bot/MOVGone.Bot.csproj
@@ -8,4 +8,11 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Remora.Discord.Gateway" Version="10.1.6" />
+      <PackageReference Include="Remora.Discord.Hosting" Version="5.0.26" />
+    </ItemGroup>
+
 </Project>
